[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/inner_circle.png" type="Texture" id=1]
[ext_resource path="res://HUD/CooldownLabel.gd" type="Script" id=2]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/PeaberryMono.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://HUD/ShootTexture.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/outer_circle.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/bullet_64.png" type="Texture" id=7]
[ext_resource path="res://Assets/StyleBoxes/pg_bar_bg.tres" type="StyleBox" id=8]
[ext_resource path="res://Assets/StyleBoxes/pg_bar_fg.tres" type="StyleBox" id=9]
[ext_resource path="res://Assets/Themes/gruve_theme.tres" type="Theme" id=10]
[ext_resource path="res://HUD/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://HUD/Lost.tscn" type="PackedScene" id=12]
[ext_resource path="res://HUD/Win.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="LevelTimer" type="Timer" parent="."]
one_shot = true

[node name="InformationHUD" type="MarginContainer" parent="."]
anchor_top = 0.889
anchor_right = 1.0
anchor_bottom = 0.889
margin_top = -0.0640259
margin_bottom = 63.936
theme = ExtResource( 10 )
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="ElementsContainer" type="HBoxContainer" parent="InformationHUD"]
margin_left = 20.0
margin_right = 716.0
margin_bottom = 64.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContainer" type="HBoxContainer" parent="InformationHUD/ElementsContainer"]
margin_right = 136.0
margin_bottom = 64.0
custom_constants/separation = 8

[node name="CooldownBar" type="TextureProgress" parent="InformationHUD/ElementsContainer/LeftContainer"]
margin_right = 64.0
margin_bottom = 64.0
max_value = 2.0
step = 0.01
value = 1.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 1 )
fill_mode = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootTexture" type="TextureRect" parent="InformationHUD/ElementsContainer/LeftContainer"]
margin_left = 72.0
margin_right = 136.0
margin_bottom = 64.0
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="InformationHUD/ElementsContainer"]
margin_left = 140.0
margin_right = 562.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="ProgressBar" type="ProgressBar" parent="InformationHUD/ElementsContainer/MarginContainer"]
margin_top = 20.0
margin_right = 422.0
margin_bottom = 44.0
size_flags_vertical = 1
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 8 )
value = 56.0
percent_visible = false

[node name="TimerLabel" type="Label" parent="InformationHUD/ElementsContainer"]
margin_left = 566.0
margin_top = 10.0
margin_right = 696.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 2 )
text = "Message"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" parent="." instance=ExtResource( 11 )]

[node name="Lost" parent="." instance=ExtResource( 12 )]

[node name="Win" parent="." instance=ExtResource( 13 )]

[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
